tests/baselines/reference/privateNameNotAllowedOutsideClass.errors.txt
privateNameNotAllowedOutsideClass.ts(1,7): error TS18029: Private identifiers are not allowed in variable declarations.


==== privateNameNotAllowedOutsideClass.ts (1 errors) ====
    const #foo = 3;
          ~~~~
!!! error TS18029: Private identifiers are not allowed in variable declarations.
    